add systemd timer as alternative to cronjob

--- a/dist.env
+++ b/dist.env
@@ -1,3 +1,8 @@
 BACKUP_FOLDER=/opt/borg-backups/backups
 FOLDERS_TO_BACKUP=(home etc boot)
-CRON_SCHEDULE="0 13 * * *"
+
+# CRON_SCHEDULE="0 13 * * *"   # Cronjob format
+CRON_SCHEDULE="*-*-* 13:00:00" # Systemd format
+CRON_TRIGGER="systemd"         # either `systemd` or `cron`
+
+DEPLOY_BORG_BINARY=false
