--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,15 +1,24 @@
 FROM ubuntu:24.04
 
+ENV DEBIAN_FRONTEND=noninteractive
+ENV BORG_PASSPHRASE=2025_such_secure_wow
+
 # Install dependencies
 RUN apt-get update && apt-get install -y \
-  cron \
-  logrotate \
-  sudo \
-  wget \
-  && rm -rf /var/lib/apt/lists/*
+    cron \
+    logrotate \
+    sudo \
+    wget \
+    systemd \
+    systemd-sysv \
+    dbus \
+    dbus-user-session \
+    && printf "systemctl start systemd-logind" >> /etc/profile \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN echo "BORG_PASSPHRASE=${BORG_PASSPHRASE}" > /etc/environment
 
 # Set working directory
 WORKDIR /app
 
-ENV BORG_PASSPHRASE=2025_such_secure_wow
-
+ENTRYPOINT [ "/sbin/init" ]
