boot first as default: faster to backup, faster to fail

--- a/dist.env
+++ b/dist.env
@@ -1,5 +1,5 @@
 BACKUP_FOLDER=/opt/borg-backups/backups
-FOLDERS_TO_BACKUP=(home etc boot)
+FOLDERS_TO_BACKUP=(boot home etc)
 
 # CRON_SCHEDULE="0 13 * * *"   # Cronjob format
 CRON_SCHEDULE="*-*-* 13:00:00" # Systemd format
