expose retention days under BACKUP_RETENTION_DAYS

--- a/dist.env
+++ b/dist.env
@@ -1,5 +1,6 @@
 BACKUP_FOLDER=/opt/borg-backups/backups
 FOLDERS_TO_BACKUP=(boot home etc)
+BACKUP_RETENTION_DAYS=7
 
 # CRON_SCHEDULE="0 13 * * *"   # Cronjob format
 CRON_SCHEDULE="*-*-* 13:00:00" # Systemd format
